shows language and currency dropdowns at footer on small displays. fix #778

--- a/templates/Evo/themes/base/less/base.less
+++ b/templates/Evo/themes/base/less/base.less
@@ -103,7 +103,7 @@ header {
                 .language-dropdown,
                 .currency-dropdown,
                 #search {
-                    display: table-cell!important;
+                    display: table-cell;
                     vertical-align: middle;
                     float: none;
                     a { white-space: nowrap; }
